--- a/backend/.choreo/component.yaml
+++ b/backend/.choreo/component.yaml
@@ -1,10 +1,8 @@
+version: 0.1
+
 endpoints:
-  - name: rest-api-be2
-    displayName: REST API
-    service:
-      basePath: /
-      port: 8000
+  - name: "REST API"
+    port: 8000
     type: REST
-    networkVisibilities:
-      - Project
-      - Public
+    networkVisibility: Public
+    context: /
